"Updated home page animation"

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <title>Freelancerdevs | Your End-to-End Web Development & Product Experts</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/src/assets/coding.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="assets/script/script.js"></script>
 </body>
 </html>
