added meta/og info + sitemap

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,43 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
+
+  <!-- HTML Meta Tags -->
+  <meta name="description"
+    content="FreelancerDevs offers expert end-to-end web development, product strategy, UI/UX design, and QA testing. Build, scale, and optimize your digital presence with our experienced team.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://freelancerdevs.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Freelancerdevs | Your End-to-End Web Development & Product Experts">
+  <meta property="og:description"
+    content="FreelancerDevs offers expert end-to-end web development, product strategy, UI/UX design, and QA testing. Build, scale, and optimize your digital presence with our experienced team.">
+  <meta property="og:image"
+    content="https://9zjb0f1vhnvr8oum.public.blob.vercel-storage.com/logo-OeImNZoasKOlRmG1gli9Z0Iu76KTPo.svg">
+  <meta property="fb:app_id" content="1647061512551274" />
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="https://freelancerdevs.com">
+  <meta property="twitter:url" content="https://freelancerdevs.com">
+  <meta name="twitter:title" content="Freelancerdevs | Your End-to-End Web Development & Product Experts">
+  <meta name="twitter:description"
+    content="FreelancerDevs offers expert end-to-end web development, product strategy, UI/UX design, and QA testing. Build, scale, and optimize your digital presence with our experienced team.">
+  <meta name="twitter:image"
+    content="https://9zjb0f1vhnvr8oum.public.blob.vercel-storage.com/logo-OeImNZoasKOlRmG1gli9Z0Iu76KTPo.svg">
+
   <title>Freelancerdevs | Your End-to-End Web Development & Product Experts</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 
   <script src="assets/script/script.js"></script>
 </body>
+
 </html>
