--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,15 @@
 </head>
 
 <body>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5G5YZMHH1J"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5G5YZMHH1J');
+  </script>
   <app-root></app-root>
 
   <script src="assets/script/script.js"></script>
